src/objects/Job_Seeker__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Seekers</relationshipLabel>
        <relationshipName>Job_Seekers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Address_Location__c</fullName>
        <formula>Suburb__c + &apos; &apos; + TEXT(State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Seekers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BrokeredLive_Phrase_Prompt__c</fullName>
        <inlineHelpText>Pick a question to prompt the jobseeker for their password</inlineHelpText>
        <label>Password Prompt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>What is your favourite food</fullName>
                </value>
                <value>
                    <fullName>Who is your favourite movie star</fullName>
                </value>
                <value>
                    <fullName>Who was you favourite teacher at school</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BrokeredLive_Phrase__c</fullName>
        <label>BrokeredLive Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrokeredLive_Username__c</fullName>
        <externalId>true</externalId>
        <label>BrokeredLive Username</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BrokeredLive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BrokeredLive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Marketed__c</fullName>
        <formula>BLANKVALUE(DATEVALUE(Marketing_Ended__c), TODAY()) - BLANKVALUE(Marketing_Start_Date__c, TODAY())</formula>
        <label>Days Marketed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_not_disclose_JSK_barriers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-disclosure (DES/DMS)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Marketed_Alt_Location__c</fullName>
        <label>Last Marketed Alt Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Marketed_EC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Marketed EC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Seekers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Marketed_Page__c</fullName>
        <label>Last Marketed Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Marketed_Search_Category__c</fullName>
        <label>Last Marketed Search Category</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Marketed_Search_Location__c</fullName>
        <label>Last Marketed Search Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Marketed_Search_Radius__c</fullName>
        <label>Last Marketed Search Radius</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Marketed_Search_State__c</fullName>
        <label>Last Marketed Search State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Marketed_Search_Type__c</fullName>
        <label>Last Marketed Search Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Marketed_Search__c</fullName>
        <label>Last Marketed Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Marketed_Searched_On__c</fullName>
        <label>Last Marketed Searched On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Length_of_Experience__c</fullName>
        <label>Length of Experience</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Longest_experience__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 3 months</fullName>
                </value>
                <value>
                    <fullName>3 to 12 months</fullName>
                </value>
                <value>
                    <fullName>12 months or more</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Longest_experience__c</fullName>
        <label>Longest job they have held</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture, Fisheries &amp; Forestry</fullName>
                </value>
                <value>
                    <fullName>Appliances &amp; Electronics</fullName>
                </value>
                <value>
                    <fullName>Arts &amp; Entertainment</fullName>
                </value>
                <value>
                    <fullName>Automotive, Boats &amp; Transport</fullName>
                </value>
                <value>
                    <fullName>Business Services &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Clothing &amp; Fashion</fullName>
                </value>
                <value>
                    <fullName>Computers, Internet &amp; Phones</fullName>
                </value>
                <value>
                    <fullName>Education &amp; Training</fullName>
                </value>
                <value>
                    <fullName>Employment Services</fullName>
                </value>
                <value>
                    <fullName>Events, Parties &amp; Weddings</fullName>
                </value>
                <value>
                    <fullName>Finance &amp; Insurance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Drink</fullName>
                </value>
                <value>
                    <fullName>Hair &amp; Beauty</fullName>
                </value>
                <value>
                    <fullName>Home &amp; Garden</fullName>
                </value>
                <value>
                    <fullName>Legal Services</fullName>
                </value>
                <value>
                    <fullName>Manufacturing &amp; Industrial</fullName>
                </value>
                <value>
                    <fullName>Medical, Health &amp; Wellbeing</fullName>
                </value>
                <value>
                    <fullName>Mining &amp; Exploration</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Pets &amp; Animal Care</fullName>
                </value>
                <value>
                    <fullName>Property &amp; Construction</fullName>
                </value>
                <value>
                    <fullName>Sport, Leisure &amp; Hobbies</fullName>
                </value>
                <value>
                    <fullName>Sustainability &amp; Environment</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Accommodation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Ended__c</fullName>
        <label>Marketing Ended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Marketing_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Outcome__c</fullName>
        <label>Marketing Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Placed</fullName>
                </value>
                <value>
                    <fullName>Found own employment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Start_Date__c</fullName>
        <formula>DATEVALUE(Marketing_Started__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Started__c</fullName>
        <label>Marketing Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Placed_Date__c</fullName>
        <label>Placed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Placed_With__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placed With</label>
        <referenceTo>Business__c</referenceTo>
        <relationshipLabel>Job Seekers</relationshipLabel>
        <relationshipName>Job_Seekers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Professional_and_Specialist_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Professional and Specialist Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifications__c</fullName>
        <label>Qualifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Aid</fullName>
                </value>
                <value>
                    <fullName>Certificate (1, 2 or 3)</fullName>
                </value>
                <value>
                    <fullName>Forklift</fullName>
                </value>
                <value>
                    <fullName>White Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_Marketed_Order_By__c</fullName>
        <formula>BLANKVALUE(Last_Marketed_Searched_On__c, LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recent Marketed Order By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>NT</fullName>
                </value>
                <value>
                    <fullName>QLD</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>TAS</fullName>
                </value>
                <value>
                    <fullName>VIC</fullName>
                </value>
                <value>
                    <fullName>WA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Marketable_Attribute__c</fullName>
        <label>1  Marketable Attribute</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X2_Marketable_Attribute__c</fullName>
        <label>2 Marketable Attribute</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X3_Marketable_Attribute__c</fullName>
        <label>3 Marketable Attribute</label>
        <type>TextArea</type>
    </fields>
    <label>Job Seeker</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Site__c</columns>
        <columns>Last_Marketed_Searched_On__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BLive</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Account__c</columns>
        <columns>BrokeredLive_Phrase__c</columns>
        <columns>BrokeredLive_Username__c</columns>
        <columns>BrokeredLive__c</columns>
        <columns>BrokeredLive_Phrase_Prompt__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BrokeredLive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>BLive</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Only</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Account__c</columns>
        <columns>Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
            <value>Marketing User</value>
        </filters>
        <label>Marketing Only</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Seekers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>